--- a/front-end/blogpessoal/package.json
+++ b/front-end/blogpessoal/package.json
@@ -16,10 +16,12 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.3.2",
+    "axios": "^0.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-use-localstorage": "^3.5.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
